@@ -1,4 +1,10 @@
-2008-11-18  Dodji Seketeli  <dodji@redhat.com>
+2008-11-19  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/37142
+	* pt.c (coerce_template_template_parm): Use the more robust
+	uses_template_parms instead of dependent_type_p.
+
+2008-11-19  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/35405
 	* pt.c (lookup_template_class): Check pointers before dereferencing
